# site

./: .gitignore  default.nix  goamazing.cabal  site.hs
css/: layout.css
pages/: home.html  hostel.html  munchies.html
templates/: layout.html
