name:                goamazing
version:             0.1.0
synopsis:            Goamazing Hostel Site
homepage:            https://goamazinghostel.com/
license:             AGPL-3
license-file:        LICENSE
author:              aszlig
maintainer:          aszlig@redmoonstudios.org
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable goamazing
  ghc-options:         -Wall
  main-is:             site.hs
  build-depends:       base >=4.9 && <4.10, filepath, hakyll
  default-language:    Haskell2010
